--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -8,6 +8,24 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (max-width: 645px) {
+      flex-direction: column;
+
+      .header__cart {
+        margin-top: 20px;
+      }
+    }
+  }
+
+  @media (max-width: 760px) {
+    .categories {
+      ul {
+        li {
+          padding: 8px 20px;
+        }
+      }
+    }
   }
 
   &__logo {
