added sort and categories logik, replace his state in home page

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -25,7 +25,10 @@ body {
   padding: 40px 0;
 
   &__title {
-    margin: 35px 0;
+    font-size: 38px;
+    font-weight: 800;
+    margin-top: 60px;
+    margin-bottom: 40px;
   }
 
   &__items {
@@ -54,7 +57,7 @@ body {
     @media (max-width: 1294px) {
       .categories {
         width: 100%;
-        overflow: scroll;
+        overflow: auto;
       }
 
       ul {
@@ -100,8 +103,9 @@ body {
   .content__title {
     display: flex;
     align-items: center;
-    font-size: 32px;
-
+    font-size: 28px;
+    
+  
     svg {
       position: relative;
       top: -2px;
@@ -146,6 +150,9 @@ body {
     }
   }
 
+  .content__items {
+    display: block;
+  }
   &__item {
     display: flex;
     width: 100%;
