--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -31,6 +31,20 @@ body {
     margin-bottom: 40px;
   }
 
+  &_error-info {
+    margin: 100px auto;
+    width: 500px;
+    text-align: center;
+    h2 {
+      font-size: 28px;
+      font-weight: 700;
+      margin-bottom: 10px;
+    }
+    p {
+      font-size: 20px;
+    }
+  }
+
   &__items {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
